force-app/main/default/objects/Distributors_and_Emails__mdt/Distributors_and_Emails__mdt.object-meta.xml
<CustomObject>
    <description>This C-metadata is used to map the Distributors to their emails.</description>
    <label>Distributors and Email</label>
    <pluralLabel>Distributors and Emails</pluralLabel>
</CustomObject>