force-app/main/default/objects/Distributors_and_Emails__mdt/fields/Distributor_Contact_Person_2__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact_Person_2__c</fullName>
    <label>Distributor Contact Person 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>