force-app/main/default/objects/Distributors_and_Emails__mdt/fields/Distributor_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact_Person__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Name of the first Contact Person</description>
    <label>Distributor Contact Person 1</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>