force-app/main/default/objects/Distributors_and_Emails__mdt/fields/Distributor_Email1__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Email1__c</fullName>
    <description>Email - 1 of the distributor</description>
    <label>Distributor Email-1</label>
    <required>true</required>
    <type>Email</type>
</CustomField>