force-app/main/default/objects/Distributors_and_Emails__mdt/fields/Distributor_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Email_2__c</fullName>
    <description>Populate this field if Distributor has more than one Email.</description>
    <label>Distributor Email-2</label>
    <type>Email</type>
</CustomField>