force-app/main/default/objects/Distributors_and_Emails__mdt/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <description>MCN of the Distributor</description>
    <inlineHelpText>Master Customer Number of the Distributor</inlineHelpText>
    <label>MCN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>